# bim-query

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bim_query/: __init__.py  filtering.py  presets.py  property_aliases.py  table_query.py  views.py
tests/: _doubles.py  test_filtering.py  test_presets.py  test_property_aliases.py  test_table_query.py
